--- a/Views/Livros/Delete.cshtml
+++ b/Views/Livros/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Titulo)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantidade)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Quantidade)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
