--- a/Views/Calculadora/index.cshtml
+++ b/Views/Calculadora/index.cshtml
@@ -16,11 +16,8 @@
     <br>
 
     <!-- <button type="submit" class="btn btn-success">Calcular</button> -->
-    <button type="submit" class="btn btn-success"
-    asp-area=""
-    asp-controller="Calculadora"
-    asp-action="Somar">
-        Somar
-    </button>
+    <button type="submit" class="btn btn-success" asp-area="" asp-controller="Calculadora" asp-action="Somar">Somar</button>
+    <button type="submit" class="btn btn-success" asp-area="" asp-controller="Calculadora" asp-action="LinqWhereExample">LinqWhereExample</button>
+    <button type="submit" class="btn btn-success" asp-area="" asp-controller="Calculadora" asp-action="LinqProjectionExample">LinqProjectionExample</button>
 
 </form>
