--- a/Views/Emprestimos/Edit.cshtml
+++ b/Views/Emprestimos/Edit.cshtml
@@ -13,11 +13,11 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EmprestimoID" />
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label asp-for="UsuarioID" class="control-label"></label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
