--- a/Views/Livros/Create.cshtml
+++ b/Views/Livros/Create.cshtml
@@ -7,6 +7,19 @@
 <h1>Create</h1>
 
 <h4>Livro</h4>
+<hr/>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            @Html.DisplayNameFor(model => model.Titulo):&nbsp;
+            <input type="text" name="filtroPesquisa" value="@ViewBag.filtroPesquisa" />
+            <input type="submit" value="Pesquisar" class="btn btn-default" /> |
+            <a asp-action="Index">Limpar</a>
+        </p>
+    </div>
+</form>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
