--- a/Views/Livros/Create.cshtml
+++ b/Views/Livros/Create.cshtml
@@ -7,37 +7,41 @@
 <h1>Create</h1>
 
 <h4>Livro</h4>
-<hr/>
-
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            @Html.DisplayNameFor(model => model.Titulo):&nbsp;
-            <input type="text" name="filtroPesquisa" value="@ViewBag.filtroPesquisa" />
-            <input type="submit" value="Pesquisar" class="btn btn-default" /> |
-            <a asp-action="Index">Limpar</a>
-        </p>
-    </div>
-</form>
 
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
                 <span asp-validation-for="Titulo" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
                 <input asp-for="Quantidade" class="form-control" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label">Autores</label>
+                <div class="col-md-10">
+                    @foreach (var item in ViewBag.Autores) {
+                        <input type="checkbox" name="selectedAutores" value="@item.Value" />@item.Text
+                        <br />
+                    }
+                </div>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            
         </form>
     </div>
 </div>
