--- a/Views/Livros/Details.cshtml
+++ b/Views/Livros/Details.cshtml
@@ -22,6 +22,27 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
+        <dd>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            Autor(es)
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model.LivroAutores) {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Autores.Nome)
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </dd>
+
     </dl>
 </div>
 <div>
