--- a/Views/Livros/Edit.cshtml
+++ b/Views/Livros/Edit.cshtml
@@ -12,20 +12,35 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <input type="hidden" asp-for="LivroId" />
+
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
                 <span asp-validation-for="Titulo" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
                 <input asp-for="Quantidade" class="form-control" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label">Autores</label>
+                <div class="col-md-10">
+                    @foreach (var item in ViewBag.Autores) {
+                        <input type="checkbox" name="selectedAutores" value="@item.Value" @(Html.Raw(item.Checked ? "checked=\"checked\"" : "")) /> @item.Text
+                        <br />
+                    }
+                </div>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
