--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PrjBiblioteca</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/resources/fib.jpg" alt="Logo da FIB" style="width: 50px" />
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,24 +31,74 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                                Início
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">
+                                Privacidade
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculadora" asp-action="Index">Calculadora</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculadora" asp-action="Index">
+                                Calculadora
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Livros" asp-action="Index">Livros</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Carrinho" asp-action="Index">
+                                Carrinho
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Autores" asp-action="Index">Autores</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UsuariosRelatorio" asp-action="Index">
+                                Relatório User
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Emprestimos" asp-action="Index">Emprestimos</a>
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Cadastros
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Livros" asp-action="Index">
+                                        Livros
+                                    </a>
+
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Autores" asp-action="Index">
+                                        Autores
+                                    </a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">
+                                        Usuários
+                                    </a>
+
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Categorias" asp-action="Index">
+                                        Categorias
+                                    </a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                    <a class="dropdown-item nav-link text-dark" asp-area="" asp-controller="Emprestimos" asp-action="Index">
+                                        Emprestimos
+                                    </a>
+
+                                </div>
+                            </div>
                         </li>
+
+                        
+
                     </ul>
                 </div>
             </div>
