--- a/Views/Livros/Index.cshtml
+++ b/Views/Livros/Index.cshtml
@@ -52,9 +52,19 @@
                     @Html.DisplayFor(modelItem => item.Quantidade)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.LivroId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.LivroId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.LivroId">Delete</a>
+
+                    <a asp-action="Edit" asp-route-id="@item.LivroId">
+                        <i class="fas fa-pencil-alt"></i>
+                    </a>
+
+                    <a asp-action="Details" asp-route-id="@item.LivroId">
+                        <i class="fas fa-info-circle"></i>
+                    </a>
+
+                    <a asp-action="Delete" asp-route-id="@item.LivroId">
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
+                    
                 </td>
             </tr>
         }
