--- a/Views/Emprestimos/Index.cshtml
+++ b/Views/Emprestimos/Index.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Usuario.UsuarioID)
+                @Html.DisplayFor(modelItem => item.Usuario.Nome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DataInicio)
