--- a/Views/Home/Components/ListagemLivros/Default.cshtml
+++ b/Views/Home/Components/ListagemLivros/Default.cshtml
@@ -21,7 +21,11 @@
                 </div>
 
                 <div class="card-footer text-muted">
-                    <a asp-area="" asp-controller="Carrinho" aspaction="Adicionar" asp-route-id="@item.LivroId" class="card-link">Add ao Carrinho</a>
+
+                    <a asp-area="" asp-controller="Carrinho" asp-action="Adicionar" asp-route-id="@item.LivroId" class="card-link">
+                        Add ao Carrinho
+                    </a>
+                    
                 </div>
             </div>
     </div>
