--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
+
+
+                    <ul class="navbar-nav">
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Carrinho" asp-action="Index">
+                                <i class="fas fa-car"></i>
+                            </a>
+                        </li>
+
+                        <partial name="_LoginPartial" />
+
+                    </ul>
+
+
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
@@ -52,11 +66,11 @@
                             </a>
                         </li>
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Carrinho" asp-action="Index">
                                 Carrinho
                             </a>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UsuariosRelatorio" asp-action="Index">
@@ -99,14 +113,13 @@
                             </div>
                         </li>
 
-                        
+                    </ul>                    
 
-                    </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container">  
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
