--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,6 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -17,10 +16,15 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Cadastrar-se</a>
+
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">
+            Cadastrar-se
+        </a>
+
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Entrar</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">
+            Entrar
+        </a>
     </li>
 }
-</ul>
